# Template-Alpine

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
website/: __init__.py  models.py  views.py
website/static/css/: input.css
website/static/js/: app.js
website/static/js/shared/: theme-init.js  theme-toggle.js
website/templates/: index.html
website/templates/components/: _layout.html
